// ============================
// Base de données — Site d'informations sur la guerre en Iran
// DBDiagram.io
// ============================

Table users {
  id            serial [pk]
  username      varchar(80) [not null, unique]
  email         varchar(150) [not null, unique]
  password_hash varchar(255) [not null]
  role          user_role [not null, default: 'editor']
  created_at    timestamp [not null, default: `now()`]
}

Table categories {
  id          serial [pk]
  name        varchar(100) [not null]
  slug        varchar(120) [not null, unique]
  description text
  parent_id   int [ref: > categories.id, null]
}

Table articles {
  id               serial [pk]
  user_id          int [not null, ref: > users.id]
  category_id      int [ref: > categories.id]
  title            varchar(200) [not null]
  slug             varchar(220) [not null, unique]
  content          text [not null]
  meta_title       varchar(70)
  meta_description varchar(160)
  status           article_status [not null, default: 'draft']
  published_at     timestamp
  created_at       timestamp [not null, default: `now()`]
  updated_at       timestamp [not null, default: `now()`]
}

Table medias {
  id          serial [pk]
  article_id  int [not null, ref: > articles.id]
  filename    varchar(255) [not null]
  alt_text    varchar(255) [not null, default: '']
  mime_type   varchar(80)  [not null, default: 'image/jpeg']
  file_size   int
  uploaded_at timestamp [not null, default: `now()`]
}

Table tags {
  id   serial [pk]
  name varchar(80) [not null, unique]
  slug varchar(100) [not null, unique]
}

Table article_tags {
  article_id int [not null, ref: > articles.id]
  tag_id     int [not null, ref: > tags.id]
  indexes {
    (article_id, tag_id) [pk]
  }
}

// ENUMs (optionnel, pour doc)
Enum user_role {
  admin
  editor
}

Enum article_status {
  draft
  published
  archived
}